COntact us page completed

--- a/frontend/contact-us.html
+++ b/frontend/contact-us.html
@@ -122,13 +122,13 @@
             <li><a class="app-menu__item " href="home.html"><i class="app-menu__icon fa fa-home"></i><span
                         class="app-menu__label">Home</span></a>
             </li>
-            <li class="treeview"><a class="app-menu__item active" href="#" data-toggle="treeview"><i
+            <li class="treeview"><a class="app-menu__item " href="#" data-toggle="treeview"><i
                         class="app-menu__icon fa fa-history"></i><span class="app-menu__label">History</span><i
                         class="treeview-indicator fa fa-angle-right"></i></a>
                 <ul class="treeview-menu">
                     <li><a class="treeview-item" href="bidding-history.html"><i class="icon fa fa-circle-o"></i>Bidding
                             History</a></li>
-                    <li><a class="treeview-item active" href="winning-history.html"><i class="icon fa fa-circle-o"></i>Winning
+                    <li><a class="treeview-item " href="winning-history.html"><i class="icon fa fa-circle-o"></i>Winning
                             History</a>
                     </li>
                     <li><a class="treeview-item" href="winning-history.html"><i class="icon fa fa-circle-o"></i>Deposit
@@ -156,8 +156,9 @@
                             Rules Board</a></li>
                 </ul>
             </li>
-            <li><a class="app-menu__item" href="docs.html"><i class="app-menu__icon fa fa-headphones"></i><span
-                        class="app-menu__label">Contact Us</span></a></li>
+            <li><a class="app-menu__item active" href="contact-us.html"><i
+                        class="app-menu__icon fa fa-headphones"></i><span class="app-menu__label">Contact Us</span></a>
+            </li>
             <li><a class="app-menu__item" href="docs.html"><i class="app-menu__icon fa fa-share-alt"></i><span
                         class="app-menu__label">Share with Friends</span></a></li>
             <li><a class="app-menu__item" href="docs.html"><i class="app-menu__icon fa fa-sign-out"></i><span
@@ -165,101 +166,47 @@
         </ul>
     </aside>
     <main class="app-content">
-        <div class="d-flex justify-content-around ">
-            <div class="d-flex justify-content-end flex-column ">
+        <div class=" d-flex justify-content-between pt-2">
+            <div>
+                <h1>Get<br />in<br />touch</h1>
+                <p>
+                    Contact us for a quote,<br />help or to join the team.
+                </p>
             </div>
-            <div class="d-flex justify-content-end flex-column ">
-                <img src="assets/images/dashboard_coin.webp" style="height: 80px;width: 100px;" alt="">
-            </div>
-            <div class="d-flex justify-content-end flex-column ">
-            </div>
+            <img src="./assets/images/contactusbanner.webp" alt="" style="flex-basis: 60%;margin-right: -10px;">
         </div>
-        <div class="transaction_main_container">
-            <h4>Transaction Details</h4>
-            <div class="transaction_content_container">
-                <div class="transaction_card">
-                    <div class="transaction_avatar_div">
-                        <!-- <img src="..." alt="Avatar" class="avatar"> -->
+        <div class="contactus_main_container">
+            <div class="sub_contact  ">
+                <div class="row mt-4">
+                    <div class="col-5 d-flex justify-content-center">
+                        <img src="./assets/shapes/phone_icon.png" alt="">
                     </div>
-                    <div
-                        style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
-                        <div>
-                            <h6>Money sent to raj</h6>
-                            <small>20 Apr, 12:39 PM</small>
-                        </div>
-                        <div>
-                            <p class="float-right"><b>+ ₹256</b><img src="./assets/shapes/clarity_wallet-line.svg"
-                                    class="ml-1" height="14px" alt=""></p>
-                            <p style="margin-top: -8px;font-size: 11px;font-weight: 500;">Balance : 654</p>
-                        </div>
+                    <div class="col-7 text-center">
+                        <h6>6789087655</h6>
                     </div>
                 </div>
-                <div class="transaction_card">
-                    <div class="transaction_avatar_div">
-                        <!-- <img src="..." alt="Avatar" class="avatar"> -->
+                <div class="row mt-4">
+                    <div class="col-5 d-flex justify-content-center">
+                        <img src="./assets/shapes/location_icon.png" alt="">
                     </div>
-                    <div
-                        style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
-                        <div>
-                            <h6>Money sent to raj</h6>
-                            <small>20 Apr, 12:39 PM</small>
-                        </div>
-                        <div>
-                            <p class="float-right"><b>+ ₹256</b><img src="./assets/shapes/clarity_wallet-line.svg"
-                                    class="ml-1" height="14px" alt=""></p>
-                            <p style="margin-top: -8px;font-size: 11px;font-weight: 500;">Balance : 654</p>
-                        </div>
+                    <div class="col-7 text-center">
+                        <h6>124/46<br />Maharashtra</h6>
                     </div>
                 </div>
-                <div class="transaction_card">
-                    <div class="transaction_avatar_div">
-                        <!-- <img src="..." alt="Avatar" class="avatar"> -->
+                <div class="row mt-4">
+                    <div class="col-5 d-flex justify-content-center">
+                        <img src="./assets/shapes/email_icon.png" alt="">
                     </div>
-                    <div
-                        style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
-                        <div>
-                            <h6>Money sent to raj</h6>
-                            <small>20 Apr, 12:39 PM</small>
-                        </div>
-                        <div>
-                            <p class="float-right"><b>+ ₹256</b><img src="./assets/shapes/clarity_wallet-line.svg"
-                                    class="ml-1" height="14px" alt=""></p>
-                            <p style="margin-top: -8px;font-size: 11px;font-weight: 500;">Balance : 654</p>
-                        </div>
+                    <div class="col-7 text-center">
+                        <h6>xyz@gmail.com</h6>
                     </div>
                 </div>
-                <div class="transaction_card">
-                    <div class="transaction_avatar_div">
-                        <!-- <img src="..." alt="Avatar" class="avatar"> -->
+                <div class="row mt-4">
+                    <div class="col-5 d-flex justify-content-center">
+                        <img src="./assets/shapes/whatasapp_icon.png" alt="">
                     </div>
-                    <div
-                        style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
-                        <div>
-                            <h6>Money sent to raj</h6>
-                            <small>20 Apr, 12:39 PM</small>
-                        </div>
-                        <div>
-                            <p class="float-right"><b>+ ₹256</b><img src="./assets/shapes/clarity_wallet-line.svg"
-                                    class="ml-1" height="14px" alt=""></p>
-                            <p style="margin-top: -8px;font-size: 11px;font-weight: 500;">Balance : 654</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="transaction_card">
-                    <div class="transaction_avatar_div">
-                        <!-- <img src="..." alt="Avatar" class="avatar"> -->
-                    </div>
-                    <div
-                        style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
-                        <div>
-                            <h6>Money sent to raj</h6>
-                            <small>20 Apr, 12:39 PM</small>
-                        </div>
-                        <div>
-                            <p class="float-right"><b>+ ₹256</b><img src="./assets/shapes/clarity_wallet-line.svg"
-                                    class="ml-1" height="14px" alt=""></p>
-                            <p style="margin-top: -8px;font-size: 11px;font-weight: 500;">Balance : 654</p>
-                        </div>
+                    <div class="col-7 text-center">
+                        <h6>6789087655</h6>
                     </div>
                 </div>
             </div>
