--- a/frontend/game-rate.html
+++ b/frontend/game-rate.html
@@ -122,8 +122,8 @@
             <li><a class="app-menu__item " href="home.html"><i class="app-menu__icon fa fa-home"></i><span
                         class="app-menu__label">Home</span></a>
             </li>
-            <li><a class="app-menu__item active" href="game-rate.html"><i
-                        class="app-menu__icon fa fa-headphones"></i><span class="app-menu__label">Game Rate</span></a>
+            <li><a class="app-menu__item active" href="game-rate.html"><i class="app-menu__icon fa  fa-inr"></i><span
+                        class="app-menu__label">Game Rate</span></a>
             </li>
             <li class="treeview"><a class="app-menu__item " href="#" data-toggle="treeview"><i
                         class="app-menu__icon fa fa-history"></i><span class="app-menu__label">History</span><i
