--- a/frontend/home.html
+++ b/frontend/home.html
@@ -117,6 +117,7 @@
                 alt="User Image">
             <p class="app-sidebar__user-name">Sahoochinmay</p>
             <p class="app-sidebar__user-designation">9937159477</p>
+            <a href="" ><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit Profile</a>
         </div>
         <ul class="app-menu">
             <li><a class="app-menu__item active" href="home.html"><i class="app-menu__icon fa fa-home"></i><span
