Bid page completed

--- a/frontend/bid.html
+++ b/frontend/bid.html
@@ -199,37 +199,51 @@
                 <button>PROCEED</button>
             </div>
         </div>
-        <div class="bid_list_table_container mt-3" >
+        <div class="bid_list_table_container mt-3">
             <table class="table">
                 <thead>
                     <tr>
-                        <th>#</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Username</th>
+                        <th class="text-center">Pana</th>
+                        <th class="text-center">Point</th>
+                        <th class="text-center">Game</th>
+                        <th class="text-center">Action</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>1</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
+                        <td class="text-center">1</td>
+                        <td class="text-center">10</td>
+                        <td class="text-center">SD</td>
+                        <td class="text-center"><i class="fa fa-trash text-danger" aria-hidden="true"></i></td>
                     </tr>
                     <tr>
-                        <td>2</td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
+                        <td class="text-center">1</td>
+                        <td class="text-center">10</td>
+                        <td class="text-center">SD</td>
+                        <td class="text-center"><i class="fa fa-trash text-danger" aria-hidden="true"></i></td>
                     </tr>
                     <tr>
-                        <td>3</td>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
+                        <td class="text-center">1</td>
+                        <td class="text-center">10</td>
+                        <td class="text-center">SD</td>
+                        <td class="text-center"><i class="fa fa-trash text-danger" aria-hidden="true"></i></td>
                     </tr>
                 </tbody>
+                <tfoot>
+                    <tr style="text-align: right;">
+                        <td colspan="4"><b>Total: ₹180</b></td>
+                    </tr>
+                </tfoot>
             </table>
+        </div>
+        <div class="d-flex justify-content-center mt-4">
+            <button style="width: 192px;
+            height: 40.87px;
+            font-size: 20px;
+            font-weight: bold;
+            color: white;
+            background: #D1A94A;
+            border-radius: 9px;border: none;">PLAY</button>
         </div>
     </main>
     <!-- Essential javascripts for application to work-->
