--- a/frontend/home.html
+++ b/frontend/home.html
@@ -22,7 +22,6 @@
     <!-- NOTE: START: -->
     <!-- Alert -->
     <div class="myAlert-top alert alert-success" id="alert_div">
-        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
         Indicates a successful or positive action 123.
     </div>
     <!-- loader -->
@@ -117,25 +116,28 @@
                 alt="User Image">
             <p class="app-sidebar__user-name">Sahoochinmay</p>
             <p class="app-sidebar__user-designation">9937159477</p>
-            <a href="" ><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit Profile</a>
+            <a href=""><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit Profile</a>
         </div>
         <ul class="app-menu">
             <li><a class="app-menu__item active" href="home.html"><i class="app-menu__icon fa fa-home"></i><span
                         class="app-menu__label">Home</span></a>
             </li>
+            <li><a class="app-menu__item" href="game-rate.html"><i class="app-menu__icon fa  fa-inr"></i><span
+                        class="app-menu__label">Game Rate</span></a>
+            </li>
             <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
                         class="app-menu__icon fa fa-history"></i><span class="app-menu__label">History</span><i
                         class="treeview-indicator fa fa-angle-right"></i></a>
                 <ul class="treeview-menu">
-                    <li><a class="treeview-item" href="bidding-history.html"><i class="icon fa fa-circle-o"></i>Bidding
+                    <li><a class="treeview-item" href="bid-history.html"><i class="icon fa fa-circle-o"></i>Bidding
                             History</a></li>
-                    <li><a class="treeview-item" href="winning-history.html"><i class="icon fa fa-circle-o"></i>Winning
+                    <li><a class="treeview-item" href="win-history.html"><i class="icon fa fa-circle-o"></i>Winning
                             History</a>
                     </li>
-                    <li><a class="treeview-item" href="winning-history.html"><i class="icon fa fa-circle-o"></i>Deposit
+                    <li><a class="treeview-item" href="deposite-history.html"><i class="icon fa fa-circle-o"></i>Deposit
                             History</a>
                     </li>
-                    <li><a class="treeview-item" href="winning-history.html"><i
+                    <li><a class="treeview-item" href="withdrawal-history.html"><i
                                 class="icon fa fa-circle-o"></i>Withdrawal
                             History</a>
                     </li>
@@ -157,11 +159,11 @@
                             Rules Board</a></li>
                 </ul>
             </li>
-            <li><a class="app-menu__item" href="docs.html"><i class="app-menu__icon fa fa-headphones"></i><span
+            <li><a class="app-menu__item" href="contact-us.html"><i class="app-menu__icon fa fa-headphones"></i><span
                         class="app-menu__label">Contact Us</span></a></li>
-            <li><a class="app-menu__item" href="docs.html"><i class="app-menu__icon fa fa-share-alt"></i><span
+            <li><a class="app-menu__item" href="share.html"><i class="app-menu__icon fa fa-share-alt"></i><span
                         class="app-menu__label">Share with Friends</span></a></li>
-            <li><a class="app-menu__item" href="docs.html"><i class="app-menu__icon fa fa-sign-out"></i><span
+            <li><a class="app-menu__item" href="index.html"><i class="app-menu__icon fa fa-sign-out"></i><span
                         class="app-menu__label">Logout</span></a></li>
         </ul>
     </aside>
@@ -203,7 +205,8 @@
                 </div>
                 <div class="ongoing_card">
                     <img src="./assets/shapes/closeRectangle.png" class="game_card_label" alt="Ongoing card">
-                    <img src="./assets/shapes/gameplaybtn.png" class="game_card_play_btn closed_game_btn" alt="Game play">
+                    <img src="./assets/shapes/gameplaybtn.png" class="game_card_play_btn closed_game_btn"
+                        alt="Game play">
                     <h4>Game Name</h4>
                     <small><b>123 - 45 - 123</b></small>
                     <div>
@@ -213,7 +216,8 @@
                 </div>
                 <div class="ongoing_card">
                     <img src="./assets/shapes/closeRectangle.png" class="game_card_label" alt="Ongoing card">
-                    <img src="./assets/shapes/gameplaybtn.png" class="game_card_play_btn closed_game_btn" alt="Game play">
+                    <img src="./assets/shapes/gameplaybtn.png" class="game_card_play_btn closed_game_btn"
+                        alt="Game play">
                     <h4>Game Name</h4>
                     <small><b>123 - 45 - 123</b></small>
                     <div>
@@ -250,9 +254,8 @@
             axios.get('/matkaApplicaton/backend/home/').then((response) => {
                 endLoader()
                 if (response.status === 200) {
-                    showAlert('success', `status ${response.status}`)
                 } else {
-                    showAlert('danger', `status ${response.status}`)
+                    // showAlert('danger', `status ${response.status}`)
                 }
                 console.log(response)
             }, (error) => {
