Redirection almost done

--- a/frontend/game.html
+++ b/frontend/game.html
@@ -117,7 +117,7 @@
                 alt="User Image">
             <p class="app-sidebar__user-name">Sahoochinmay</p>
             <p class="app-sidebar__user-designation">9937159477</p>
-            <a href=""><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit Profile</a>
+            <a href="profile.html"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit Profile</a>
         </div>
         <ul class="app-menu">
             <li><a class="app-menu__item" href="home.html"><i class="app-menu__icon fa fa-home"></i><span
@@ -174,37 +174,37 @@
         </div>
         <div class="row mt-4">
             <div class="col-6">
-                <div class="game_card">
+                <div class="game_card" onclick="navigate('bid.html')">
                     <h5>SINGLE<br />DIGIT</h5>
                     <img src="./assets/images/single_digit_icon.png" height="40px" alt="">
                 </div>
             </div>
             <div class="col-6">
-                <div class="game_card">
+                <div class="game_card" onclick="navigate('bid.html')">
                     <h5>JODI<br />DIGIT</h5>
                     <img src="./assets/images/jodi_digit_icon.png" height="40px" alt="">
                 </div>
             </div>
             <div class="col-6 mt-3">
-                <div class="game_card">
+                <div class="game_card" onclick="navigate('bid.html')">
                     <h5>SINGLE<br />PANNA</h5>
                     <img src="./assets/images/single_panna_icon.png" height="40px" alt="">
                 </div>
             </div>
             <div class="col-6 mt-3">
-                <div class="game_card">
+                <div class="game_card" onclick="navigate('bid.html')">
                     <h5>DOUBLE<br />PANNA</h5>
                     <img src="./assets/images/double_panna_icon.png" height="40px" alt="">
                 </div>
             </div>
             <div class="col-6 mt-3">
-                <div class="game_card">
+                <div class="game_card" onclick="navigate('bid.html')">
                     <h5>TRIPLE<br />PANNA</h5>
                     <img src="./assets/images/triple_panna_icon.png" height="40px" alt="">
                 </div>
             </div>
             <div class="col-6 mt-3">
-                <div class="game_card">
+                <div class="game_card" onclick="navigate('bid.html')">
                     <h5>HALF<br />SANGAM</h5>
                     <img src="./assets/images/half_sangam_icon.png" height="40px" alt="">
                 </div>
@@ -212,7 +212,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-6 mt-3">
-                <div class="game_card">
+                <div class="game_card" onclick="navigate('bid.html')">
                     <h5>FULL<br />SANGAM</h5>
                     <img src="./assets/images/full_sangam_icon.png" height="40px" alt="">
                 </div>
