--- a/frontend/home.html
+++ b/frontend/home.html
@@ -116,7 +116,7 @@
                 alt="User Image">
             <p class="app-sidebar__user-name">Sahoochinmay</p>
             <p class="app-sidebar__user-designation">9937159477</p>
-            <a href=""><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit Profile</a>
+            <a href="profile.html"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit Profile</a>
         </div>
         <ul class="app-menu">
             <li><a class="app-menu__item active" href="home.html"><i class="app-menu__icon fa fa-home"></i><span
@@ -183,7 +183,7 @@
             <div id="ongoing_tab_content" class="d-flex justify-content-center flex-column">
                 <div class="ongoing_card">
                     <img src="./assets/shapes/openRectangle.png" class="game_card_label" alt="Ongoing card">
-                    <img src="./assets/shapes/gameplaybtn.png" class="game_card_play_btn" alt="Game play">
+                    <img src="./assets/shapes/gameplaybtn.png" onclick="navigate('game.html')" class="game_card_play_btn" alt="Game play">
                     <h4>Game Name</h4>
                     <small><b>XXX - XX - XXX</b></small>
                     <div>
@@ -194,7 +194,7 @@
                 </div>
                 <div class="ongoing_card">
                     <img src="./assets/shapes/openRectangle.png" class="game_card_label" alt="Ongoing card">
-                    <img src="./assets/shapes/gameplaybtn.png" class="game_card_play_btn" alt="Game play">
+                    <img src="./assets/shapes/gameplaybtn.png" onclick="navigate('game.html')" class="game_card_play_btn" alt="Game play">
                     <h4>Game Name</h4>
                     <small><b>XXX - XX - XXX</b></small>
                     <div>
