--- a/frontend/bid.html
+++ b/frontend/bid.html
@@ -117,7 +117,7 @@
                 alt="User Image">
             <p class="app-sidebar__user-name">Sahoochinmay</p>
             <p class="app-sidebar__user-designation">9937159477</p>
-            <a href=""><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit Profile</a>
+            <a href="profile.html"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit Profile</a>
         </div>
         <ul class="app-menu">
             <li><a class="app-menu__item" href="home.html"><i class="app-menu__icon fa fa-home"></i><span
@@ -170,7 +170,7 @@
     </aside>
     <main class="app-content">
         <div class="bid_top_bar">
-            <p><i class="fa fa-chevron-left" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;Game Name - SD</p>
+            <p><i class="fa fa-chevron-left" onclick="navigate('game.html')" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;Game Name - SD</p>
             <p><i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp;3h : 20m : 37s</p>
         </div>
         <div class="d-flex justify-content-between mt-4">
