--- a/frontend/bid.html
+++ b/frontend/bid.html
@@ -105,7 +105,8 @@
                 </ul>
             </li>
             <!-- User Menu-->
-            <li><a class="app-nav__item" href="#"><i class="fa fa-cog fa-lg"></i></a>
+            <li><a class="app-nav__item" style="font-size: 15px;" href="#"><img height="17px" style="margin-top:-3px;"
+                        src="./assets/shapes/et_wallet.svg" alt="">&nbsp;50</a>
             </li>
         </ul>
     </header>
@@ -170,7 +171,8 @@
     </aside>
     <main class="app-content">
         <div class="bid_top_bar">
-            <p><i class="fa fa-chevron-left" onclick="navigate('game.html')" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;Game Name - SD</p>
+            <p><i class="fa fa-chevron-left" onclick="navigate('game.html')"
+                    aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;Game Name - SD</p>
             <p><i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp;3h : 20m : 37s</p>
         </div>
         <div class="d-flex justify-content-between mt-4">
