--- a/frontend/home.html
+++ b/frontend/home.html
@@ -104,7 +104,8 @@
                 </ul>
             </li>
             <!-- User Menu-->
-            <li><a class="app-nav__item" href="#"><i class="fa fa-cog fa-lg"></i></a>
+            <li><a class="app-nav__item" style="font-size: 15px;" href="#"><img height="17px" style="margin-top:-3px;"
+                        src="./assets/shapes/et_wallet.svg" alt="">&nbsp;50</a>
             </li>
         </ul>
     </header>
@@ -183,7 +184,8 @@
             <div id="ongoing_tab_content" class="d-flex justify-content-center flex-column">
                 <div class="ongoing_card">
                     <img src="./assets/shapes/openRectangle.png" class="game_card_label" alt="Ongoing card">
-                    <img src="./assets/shapes/gameplaybtn.png" onclick="navigate('game.html')" class="game_card_play_btn" alt="Game play">
+                    <img src="./assets/shapes/gameplaybtn.png" onclick="navigate('game.html')"
+                        class="game_card_play_btn" alt="Game play">
                     <h4>Game Name</h4>
                     <small><b>XXX - XX - XXX</b></small>
                     <div>
@@ -194,7 +196,8 @@
                 </div>
                 <div class="ongoing_card">
                     <img src="./assets/shapes/openRectangle.png" class="game_card_label" alt="Ongoing card">
-                    <img src="./assets/shapes/gameplaybtn.png" onclick="navigate('game.html')" class="game_card_play_btn" alt="Game play">
+                    <img src="./assets/shapes/gameplaybtn.png" onclick="navigate('game.html')"
+                        class="game_card_play_btn" alt="Game play">
                     <h4>Game Name</h4>
                     <small><b>XXX - XX - XXX</b></small>
                     <div>
