--- a/frontend/withdrawal.html
+++ b/frontend/withdrawal.html
@@ -105,7 +105,8 @@
                 </ul>
             </li>
             <!-- User Menu-->
-            <li><a class="app-nav__item" href="#"><i class="fa fa-cog fa-lg"></i></a>
+            <li><a class="app-nav__item" style="font-size: 15px;" href="#"><img height="17px" style="margin-top:-3px;"
+                        src="./assets/shapes/et_wallet.svg" alt="">&nbsp;50</a>
             </li>
         </ul>
     </header>
