--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -179,16 +179,15 @@
                 class="profile_img" alt="" srcset="">
         </div>
         <div class="formdata">
-            <form action="../backend/views/profile.php" method="post">
+            <form action="">
                 <div class="name">
                     <input type="text" name="fname" id="fname" placeholder="First Name">
                     <input type="text" name="lname" id="lname" placeholder="Last Name">
                 </div>
 
-                <input type="text" name="username" id="" placeholder="<?php echo $_SESSION["username"] ?>">
+                <input type="text" name="username" id="" placeholder="Username">
                 <input type="number" name="account_no" id="" placeholder="69287386238729">
                 <input type="email" name="email" id="" placeholder="Email">
-                <button type="submit" name="submit">Submit</button>
             </form>
         </div>
         <div class="accordion-item">
